--- a/index.html
+++ b/index.html
@@ -49,19 +49,23 @@
         <div class="topbar">
           <div class="topbar-quality">
             <a class="topbar-quality__link" href="#">
-              <svg class="topbar-quality__icon" width="40" height="40">
+              <svg width="40" height="40">
                 <use
                   class="topbar-quality__svg"
                   href="./images/sprite.svg#quality-badge"
                 ></use>
               </svg>
-              TRUSTED HOSTING PROVIDER SINCE 2009
-              <svg width="40" height="40">
+              <p class="topbar-quality__title">
+                TRUSTED HOSTING PROVIDER SINCE 2009
+              </p>
+
+              <!-- <svg width="40" height="40">
                 <use
                   class="big-arrow"
                   href="./images/sprite.svg#big-arrow"
                 ></use>
-              </svg>
+              </svg> -->
+              <span class="menu-arrow--right"></span>
             </a>
           </div>
 
@@ -707,9 +711,7 @@
                     24x7 Support<span class="services-cards__value">+</span>
                   </p>
 
-                  <a
-                    href="#"
-                    class="services-cards__button services-cards__button--white"
+                  <a href="#" class="services-cards__button btn-grad"
                     >10 GBPS SERVER CONFIGURE</a
                   >
                 </li>
@@ -755,9 +757,7 @@
                     24x7 Support<span class="services-cards__value">+</span>
                   </p>
 
-                  <a
-                    href="#"
-                    class="services-cards__button services-cards__button--white"
+                  <a href="#" class="services-cards__button btn-grad"
                     >10 GBPS SERVER CONFIGURE</a
                   >
                 </li>
@@ -803,9 +803,7 @@
                     24x7 Support<span class="services-cards__value">+</span>
                   </p>
 
-                  <a
-                    href="#"
-                    class="services-cards__button services-cards__button--white"
+                  <a href="#" class="services-cards__button btn-grad"
                     >10 GBPS SERVER CONFIGURE</a
                   >
                 </li>
@@ -851,168 +849,177 @@
                     24x7 Support<span class="services-cards__value">+</span>
                   </p>
 
-                  <a
-                    href="#"
-                    class="services-cards__button services-cards__button--white"
+                  <a href="#" class="services-cards__button btn-grad"
                     >10 GBPS SERVER CONFIGURE</a
                   >
                 </li>
-              </ul>
-
-              <h2 class="section-title">Dedicated Servers</h2>
-
-              <ul class="services-dedicated__list">
-                <li class="services-dedicated__item">
-                  <a href="#">
-                    <h3 class="services-dedicated__title">
-                      UKRAINE DEDICATED SERVERS
-                      <span class="menu-arrow menu-arrow--right"></span>
-                    </h3>
-                    <p class="services-dedicated__description">
-                      Customizable dedicated servers located at a Tier III data
-                      center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
-                    </p></a
-                  >
-                </li>
-
-                <li class="services-dedicated__item">
-                  <a href="#">
-                    <h3 class="services-dedicated__title">
-                      UKRAINE DEDICATED SERVERS
-                      <span class="menu-arrow menu-arrow--right"></span>
-                    </h3>
-                    <p class="services-dedicated__description">
-                      Customizable dedicated servers located at a Tier III data
-                      center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
-                    </p></a
-                  >
-                </li>
-
-                <li class="services-dedicated__item">
-                  <a href="#">
-                    <h3 class="services-dedicated__title">
-                      UKRAINE DEDICATED SERVERS
-                      <span class="menu-arrow menu-arrow--right"></span>
-                    </h3>
-                    <p class="services-dedicated__description">
-                      Customizable dedicated servers located at a Tier III data
-                      center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
-                    </p></a
-                  >
-                </li>
-
-                <li class="services-dedicated__item">
-                  <a href="#">
-                    <h3 class="services-dedicated__title">
-                      UKRAINE DEDICATED SERVERS
-                      <span class="menu-arrow menu-arrow--right"></span>
-                    </h3>
-                    <p class="services-dedicated__description">
-                      Customizable dedicated servers located at a Tier III data
-                      center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
-                    </p></a
-                  >
-                </li>
-
-                <li class="services-dedicated__item">
-                  <a href="#">
-                    <h3 class="services-dedicated__title">
-                      UKRAINE DEDICATED SERVERS
-                      <span class="menu-arrow menu-arrow--right"></span>
-                    </h3>
-                    <p class="services-dedicated__description">
-                      Customizable dedicated servers located at a Tier III data
-                      center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
-                    </p></a
-                  >
-                </li>
-
-                <li class="services-dedicated__item">
-                  <a href="#">
-                    <h3 class="services-dedicated__title">
-                      UKRAINE DEDICATED SERVERS
-                      <span class="menu-arrow menu-arrow--right"></span>
-                    </h3>
-                    <p class="services-dedicated__description">
-                      Customizable dedicated servers located at a Tier III data
-                      center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
-                    </p></a
-                  >
-                </li>
-
-                <li class="services-dedicated__item">
-                  <a href="#">
-                    <h3 class="services-dedicated__title">
-                      UKRAINE DEDICATED SERVERS
-                      <span class="menu-arrow menu-arrow--right"></span>
-                    </h3>
-                    <p class="services-dedicated__description">
-                      Customizable dedicated servers located at a Tier III data
-                      center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
-                    </p></a
-                  >
-                </li>
-
-                <li class="services-dedicated__item">
-                  <a href="#">
-                    <h3 class="services-dedicated__title">
-                      UKRAINE DEDICATED SERVERS
-                      <span class="menu-arrow menu-arrow--right"></span>
-                    </h3>
-                    <p class="services-dedicated__description">
-                      Customizable dedicated servers located at a Tier III data
-                      center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
-                    </p></a
-                  >
-                </li>
-
-                <li class="services-dedicated__item">
-                  <a href="#">
-                    <h3 class="services-dedicated__title">
-                      UKRAINE DEDICATED SERVERS
-                      <span class="menu-arrow menu-arrow--right"></span>
-                    </h3>
-                    <p class="services-dedicated__description">
-                      Customizable dedicated servers located at a Tier III data
-                      center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
-                    </p></a
-                  >
-                </li>
-              </ul>
-
-              <h2 class="section-title">VPS</h2>
-
-              <ul>
-                <li></li>
               </ul>
             </div>
+
+            <h2 class="section-title">Dedicated Servers</h2>
+
+            <ul class="services-dedicated__list">
+              <li class="services-dedicated__item">
+                <a href="#">
+                  <h3 class="services-dedicated__title">
+                    UKRAINE DEDICATED SERVERS
+                    <span class="menu-arrow menu-arrow--right"></span>
+                  </h3>
+                  <p class="services-dedicated__description">
+                    Customizable dedicated servers located at a Tier III data
+                    center in Kyiv, Ukraine, with outstanding connectivity to
+                    Asia and the Middle East. 24/7 professional technical
+                    support, unmetered bandwidth, SLA guarantee, and flawless
+                    company reputation over a decade.
+                  </p></a
+                >
+              </li>
+
+              <li class="services-dedicated__item">
+                <a href="#">
+                  <h3 class="services-dedicated__title">
+                    UKRAINE DEDICATED SERVERS
+                    <span class="menu-arrow menu-arrow--right"></span>
+                  </h3>
+                  <p class="services-dedicated__description">
+                    Customizable dedicated servers located at a Tier III data
+                    center in Kyiv, Ukraine, with outstanding connectivity to
+                    Asia and the Middle East. 24/7 professional technical
+                    support, unmetered bandwidth, SLA guarantee, and flawless
+                    company reputation over a decade.
+                  </p></a
+                >
+              </li>
+
+              <li class="services-dedicated__item">
+                <a href="#">
+                  <h3 class="services-dedicated__title">
+                    UKRAINE DEDICATED SERVERS
+                    <span class="menu-arrow menu-arrow--right"></span>
+                  </h3>
+                  <p class="services-dedicated__description">
+                    Customizable dedicated servers located at a Tier III data
+                    center in Kyiv, Ukraine, with outstanding connectivity to
+                    Asia and the Middle East. 24/7 professional technical
+                    support, unmetered bandwidth, SLA guarantee, and flawless
+                    company reputation over a decade.
+                  </p></a
+                >
+              </li>
+
+              <li class="services-dedicated__item">
+                <a href="#">
+                  <h3 class="services-dedicated__title">
+                    UKRAINE DEDICATED SERVERS
+                    <span class="menu-arrow menu-arrow--right"></span>
+                  </h3>
+                  <p class="services-dedicated__description">
+                    Customizable dedicated servers located at a Tier III data
+                    center in Kyiv, Ukraine, with outstanding connectivity to
+                    Asia and the Middle East. 24/7 professional technical
+                    support, unmetered bandwidth, SLA guarantee, and flawless
+                    company reputation over a decade.
+                  </p></a
+                >
+              </li>
+
+              <li class="services-dedicated__item">
+                <a href="#">
+                  <h3 class="services-dedicated__title">
+                    UKRAINE DEDICATED SERVERS
+                    <span class="menu-arrow menu-arrow--right"></span>
+                  </h3>
+                  <p class="services-dedicated__description">
+                    Customizable dedicated servers located at a Tier III data
+                    center in Kyiv, Ukraine, with outstanding connectivity to
+                    Asia and the Middle East. 24/7 professional technical
+                    support, unmetered bandwidth, SLA guarantee, and flawless
+                    company reputation over a decade.
+                  </p></a
+                >
+              </li>
+
+              <li class="services-dedicated__item">
+                <a href="#">
+                  <h3 class="services-dedicated__title">
+                    UKRAINE DEDICATED SERVERS
+                    <span class="menu-arrow menu-arrow--right"></span>
+                  </h3>
+                  <p class="services-dedicated__description">
+                    Customizable dedicated servers located at a Tier III data
+                    center in Kyiv, Ukraine, with outstanding connectivity to
+                    Asia and the Middle East. 24/7 professional technical
+                    support, unmetered bandwidth, SLA guarantee, and flawless
+                    company reputation over a decade.
+                  </p></a
+                >
+              </li>
+
+              <li class="services-dedicated__item">
+                <a href="#">
+                  <h3 class="services-dedicated__title">
+                    UKRAINE DEDICATED SERVERS
+                    <span class="menu-arrow menu-arrow--right"></span>
+                  </h3>
+                  <p class="services-dedicated__description">
+                    Customizable dedicated servers located at a Tier III data
+                    center in Kyiv, Ukraine, with outstanding connectivity to
+                    Asia and the Middle East. 24/7 professional technical
+                    support, unmetered bandwidth, SLA guarantee, and flawless
+                    company reputation over a decade.
+                  </p></a
+                >
+              </li>
+
+              <li class="services-dedicated__item">
+                <a href="#">
+                  <h3 class="services-dedicated__title">
+                    UKRAINE DEDICATED SERVERS
+                    <span class="menu-arrow menu-arrow--right"></span>
+                  </h3>
+                  <p class="services-dedicated__description">
+                    Customizable dedicated servers located at a Tier III data
+                    center in Kyiv, Ukraine, with outstanding connectivity to
+                    Asia and the Middle East. 24/7 professional technical
+                    support, unmetered bandwidth, SLA guarantee, and flawless
+                    company reputation over a decade.
+                  </p></a
+                >
+              </li>
+
+              <li class="services-dedicated__item">
+                <a href="#">
+                  <h3 class="services-dedicated__title">
+                    UKRAINE DEDICATED SERVERS
+                    <span class="menu-arrow menu-arrow--right"></span>
+                  </h3>
+                  <p class="services-dedicated__description">
+                    Customizable dedicated servers located at a Tier III data
+                    center in Kyiv, Ukraine, with outstanding connectivity to
+                    Asia and the Middle East. 24/7 professional technical
+                    support, unmetered bandwidth, SLA guarantee, and flawless
+                    company reputation over a decade.
+                  </p></a
+                >
+              </li>
+            </ul>
+
+            <h2 class="section-title">VPS</h2>
+
+            <ul class="services-vps__list">
+              <li class="services-vps__item">
+                <a class="services-vps__link" href="#">Ukraine SSD VPS</a>
+              </li>
+              <li class="services-vps__item">
+                <a class="services-vps__link" href="#">Netherlands SSD VPS</a>
+              </li>
+              <li class="services-vps__item">
+                <a class="services-vps__link" href="#">usa SSD VPS</a>
+              </li>
+              <li class="services-vps__item">
+                <a class="services-vps__link" href="#">epic VPS</a>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
