--- a/index.html
+++ b/index.html
@@ -617,13 +617,12 @@
             <ul class="services-menu">
               <li class="services-menu__item">
                 <input
-                  checked
                   type="radio"
                   name="services_menu_toggle"
                   id="servers_button"
                   class="services-menu__button"
                 />
-                <label for="input_description" class="services-menu__label"
+                <label for="servers_button" class="services-menu__label"
                   >Servers</label
                 >
               </li>
@@ -635,10 +634,9 @@
                   id="hosting_button"
                   class="services-menu__button"
                 />
-                <label for="input_description" class="services-menu__label"
+                <label for="hosting_button" class="services-menu__label"
                   >Hosting</label
                 >
-                <div id="hostingContent">Hosting</div>
               </li>
 
               <li class="services-menu__item">
@@ -648,10 +646,9 @@
                   id="cloud_button"
                   class="services-menu__button"
                 />
-                <label for="input_description" class="services-menu__label"
+                <label for="cloud_button" class="services-menu__label"
                   >Cloud</label
                 >
-                <div id="cloudContent">Cloud</div>
               </li>
 
               <li class="services-menu__item">
@@ -661,10 +658,9 @@
                   id="services_button"
                   class="services-menu__button"
                 />
-                <label for="input_description" class="services-menu__label"
+                <label for="services_button" class="services-menu__label"
                   >Services</label
                 >
-                <div id="servicesContent">Services</div>
               </li>
             </ul>
 
@@ -854,172 +850,178 @@
                   >
                 </li>
               </ul>
+
+              <h2 class="section-title">Dedicated Servers</h2>
+
+              <ul class="services-dedicated__list">
+                <li class="services-dedicated__item">
+                  <a href="#">
+                    <h3 class="services-dedicated__title">
+                      UKRAINE DEDICATED SERVERS
+                      <span class="menu-arrow menu-arrow--right"></span>
+                    </h3>
+                    <p class="services-dedicated__description">
+                      Customizable dedicated servers located at a Tier III data
+                      center in Kyiv, Ukraine, with outstanding connectivity to
+                      Asia and the Middle East. 24/7 professional technical
+                      support, unmetered bandwidth, SLA guarantee, and flawless
+                      company reputation over a decade.
+                    </p></a
+                  >
+                </li>
+
+                <li class="services-dedicated__item">
+                  <a href="#">
+                    <h3 class="services-dedicated__title">
+                      UKRAINE DEDICATED SERVERS
+                      <span class="menu-arrow menu-arrow--right"></span>
+                    </h3>
+                    <p class="services-dedicated__description">
+                      Customizable dedicated servers located at a Tier III data
+                      center in Kyiv, Ukraine, with outstanding connectivity to
+                      Asia and the Middle East. 24/7 professional technical
+                      support, unmetered bandwidth, SLA guarantee, and flawless
+                      company reputation over a decade.
+                    </p></a
+                  >
+                </li>
+
+                <li class="services-dedicated__item">
+                  <a href="#">
+                    <h3 class="services-dedicated__title">
+                      UKRAINE DEDICATED SERVERS
+                      <span class="menu-arrow menu-arrow--right"></span>
+                    </h3>
+                    <p class="services-dedicated__description">
+                      Customizable dedicated servers located at a Tier III data
+                      center in Kyiv, Ukraine, with outstanding connectivity to
+                      Asia and the Middle East. 24/7 professional technical
+                      support, unmetered bandwidth, SLA guarantee, and flawless
+                      company reputation over a decade.
+                    </p></a
+                  >
+                </li>
+
+                <li class="services-dedicated__item">
+                  <a href="#">
+                    <h3 class="services-dedicated__title">
+                      UKRAINE DEDICATED SERVERS
+                      <span class="menu-arrow menu-arrow--right"></span>
+                    </h3>
+                    <p class="services-dedicated__description">
+                      Customizable dedicated servers located at a Tier III data
+                      center in Kyiv, Ukraine, with outstanding connectivity to
+                      Asia and the Middle East. 24/7 professional technical
+                      support, unmetered bandwidth, SLA guarantee, and flawless
+                      company reputation over a decade.
+                    </p></a
+                  >
+                </li>
+
+                <li class="services-dedicated__item">
+                  <a href="#">
+                    <h3 class="services-dedicated__title">
+                      UKRAINE DEDICATED SERVERS
+                      <span class="menu-arrow menu-arrow--right"></span>
+                    </h3>
+                    <p class="services-dedicated__description">
+                      Customizable dedicated servers located at a Tier III data
+                      center in Kyiv, Ukraine, with outstanding connectivity to
+                      Asia and the Middle East. 24/7 professional technical
+                      support, unmetered bandwidth, SLA guarantee, and flawless
+                      company reputation over a decade.
+                    </p></a
+                  >
+                </li>
+
+                <li class="services-dedicated__item">
+                  <a href="#">
+                    <h3 class="services-dedicated__title">
+                      UKRAINE DEDICATED SERVERS
+                      <span class="menu-arrow menu-arrow--right"></span>
+                    </h3>
+                    <p class="services-dedicated__description">
+                      Customizable dedicated servers located at a Tier III data
+                      center in Kyiv, Ukraine, with outstanding connectivity to
+                      Asia and the Middle East. 24/7 professional technical
+                      support, unmetered bandwidth, SLA guarantee, and flawless
+                      company reputation over a decade.
+                    </p></a
+                  >
+                </li>
+
+                <li class="services-dedicated__item">
+                  <a href="#">
+                    <h3 class="services-dedicated__title">
+                      UKRAINE DEDICATED SERVERS
+                      <span class="menu-arrow menu-arrow--right"></span>
+                    </h3>
+                    <p class="services-dedicated__description">
+                      Customizable dedicated servers located at a Tier III data
+                      center in Kyiv, Ukraine, with outstanding connectivity to
+                      Asia and the Middle East. 24/7 professional technical
+                      support, unmetered bandwidth, SLA guarantee, and flawless
+                      company reputation over a decade.
+                    </p></a
+                  >
+                </li>
+
+                <li class="services-dedicated__item">
+                  <a href="#">
+                    <h3 class="services-dedicated__title">
+                      UKRAINE DEDICATED SERVERS
+                      <span class="menu-arrow menu-arrow--right"></span>
+                    </h3>
+                    <p class="services-dedicated__description">
+                      Customizable dedicated servers located at a Tier III data
+                      center in Kyiv, Ukraine, with outstanding connectivity to
+                      Asia and the Middle East. 24/7 professional technical
+                      support, unmetered bandwidth, SLA guarantee, and flawless
+                      company reputation over a decade.
+                    </p></a
+                  >
+                </li>
+
+                <li class="services-dedicated__item">
+                  <a href="#">
+                    <h3 class="services-dedicated__title">
+                      UKRAINE DEDICATED SERVERS
+                      <span class="menu-arrow menu-arrow--right"></span>
+                    </h3>
+                    <p class="services-dedicated__description">
+                      Customizable dedicated servers located at a Tier III data
+                      center in Kyiv, Ukraine, with outstanding connectivity to
+                      Asia and the Middle East. 24/7 professional technical
+                      support, unmetered bandwidth, SLA guarantee, and flawless
+                      company reputation over a decade.
+                    </p></a
+                  >
+                </li>
+              </ul>
+
+              <h2 class="section-title">VPS</h2>
+
+              <ul class="services-vps__list">
+                <li class="services-vps__item">
+                  <a class="services-vps__link" href="#">Ukraine SSD VPS</a>
+                </li>
+                <li class="services-vps__item">
+                  <a class="services-vps__link" href="#">Netherlands SSD VPS</a>
+                </li>
+                <li class="services-vps__item">
+                  <a class="services-vps__link" href="#">usa SSD VPS</a>
+                </li>
+                <li class="services-vps__item">
+                  <a class="services-vps__link" href="#">epic VPS</a>
+                </li>
+              </ul>
             </div>
 
-            <h2 class="section-title">Dedicated Servers</h2>
+            <div id="hostingContent">Hosting</div>
 
-            <ul class="services-dedicated__list">
-              <li class="services-dedicated__item">
-                <a href="#">
-                  <h3 class="services-dedicated__title">
-                    UKRAINE DEDICATED SERVERS
-                    <span class="menu-arrow menu-arrow--right"></span>
-                  </h3>
-                  <p class="services-dedicated__description">
-                    Customizable dedicated servers located at a Tier III data
-                    center in Kyiv, Ukraine, with outstanding connectivity to
-                    Asia and the Middle East. 24/7 professional technical
-                    support, unmetered bandwidth, SLA guarantee, and flawless
-                    company reputation over a decade.
-                  </p></a
-                >
-              </li>
+            <div id="cloudContent">Cloud</div>
 
-              <li class="services-dedicated__item">
-                <a href="#">
-                  <h3 class="services-dedicated__title">
-                    UKRAINE DEDICATED SERVERS
-                    <span class="menu-arrow menu-arrow--right"></span>
-                  </h3>
-                  <p class="services-dedicated__description">
-                    Customizable dedicated servers located at a Tier III data
-                    center in Kyiv, Ukraine, with outstanding connectivity to
-                    Asia and the Middle East. 24/7 professional technical
-                    support, unmetered bandwidth, SLA guarantee, and flawless
-                    company reputation over a decade.
-                  </p></a
-                >
-              </li>
-
-              <li class="services-dedicated__item">
-                <a href="#">
-                  <h3 class="services-dedicated__title">
-                    UKRAINE DEDICATED SERVERS
-                    <span class="menu-arrow menu-arrow--right"></span>
-                  </h3>
-                  <p class="services-dedicated__description">
-                    Customizable dedicated servers located at a Tier III data
-                    center in Kyiv, Ukraine, with outstanding connectivity to
-                    Asia and the Middle East. 24/7 professional technical
-                    support, unmetered bandwidth, SLA guarantee, and flawless
-                    company reputation over a decade.
-                  </p></a
-                >
-              </li>
-
-              <li class="services-dedicated__item">
-                <a href="#">
-                  <h3 class="services-dedicated__title">
-                    UKRAINE DEDICATED SERVERS
-                    <span class="menu-arrow menu-arrow--right"></span>
-                  </h3>
-                  <p class="services-dedicated__description">
-                    Customizable dedicated servers located at a Tier III data
-                    center in Kyiv, Ukraine, with outstanding connectivity to
-                    Asia and the Middle East. 24/7 professional technical
-                    support, unmetered bandwidth, SLA guarantee, and flawless
-                    company reputation over a decade.
-                  </p></a
-                >
-              </li>
-
-              <li class="services-dedicated__item">
-                <a href="#">
-                  <h3 class="services-dedicated__title">
-                    UKRAINE DEDICATED SERVERS
-                    <span class="menu-arrow menu-arrow--right"></span>
-                  </h3>
-                  <p class="services-dedicated__description">
-                    Customizable dedicated servers located at a Tier III data
-                    center in Kyiv, Ukraine, with outstanding connectivity to
-                    Asia and the Middle East. 24/7 professional technical
-                    support, unmetered bandwidth, SLA guarantee, and flawless
-                    company reputation over a decade.
-                  </p></a
-                >
-              </li>
-
-              <li class="services-dedicated__item">
-                <a href="#">
-                  <h3 class="services-dedicated__title">
-                    UKRAINE DEDICATED SERVERS
-                    <span class="menu-arrow menu-arrow--right"></span>
-                  </h3>
-                  <p class="services-dedicated__description">
-                    Customizable dedicated servers located at a Tier III data
-                    center in Kyiv, Ukraine, with outstanding connectivity to
-                    Asia and the Middle East. 24/7 professional technical
-                    support, unmetered bandwidth, SLA guarantee, and flawless
-                    company reputation over a decade.
-                  </p></a
-                >
-              </li>
-
-              <li class="services-dedicated__item">
-                <a href="#">
-                  <h3 class="services-dedicated__title">
-                    UKRAINE DEDICATED SERVERS
-                    <span class="menu-arrow menu-arrow--right"></span>
-                  </h3>
-                  <p class="services-dedicated__description">
-                    Customizable dedicated servers located at a Tier III data
-                    center in Kyiv, Ukraine, with outstanding connectivity to
-                    Asia and the Middle East. 24/7 professional technical
-                    support, unmetered bandwidth, SLA guarantee, and flawless
-                    company reputation over a decade.
-                  </p></a
-                >
-              </li>
-
-              <li class="services-dedicated__item">
-                <a href="#">
-                  <h3 class="services-dedicated__title">
-                    UKRAINE DEDICATED SERVERS
-                    <span class="menu-arrow menu-arrow--right"></span>
-                  </h3>
-                  <p class="services-dedicated__description">
-                    Customizable dedicated servers located at a Tier III data
-                    center in Kyiv, Ukraine, with outstanding connectivity to
-                    Asia and the Middle East. 24/7 professional technical
-                    support, unmetered bandwidth, SLA guarantee, and flawless
-                    company reputation over a decade.
-                  </p></a
-                >
-              </li>
-
-              <li class="services-dedicated__item">
-                <a href="#">
-                  <h3 class="services-dedicated__title">
-                    UKRAINE DEDICATED SERVERS
-                    <span class="menu-arrow menu-arrow--right"></span>
-                  </h3>
-                  <p class="services-dedicated__description">
-                    Customizable dedicated servers located at a Tier III data
-                    center in Kyiv, Ukraine, with outstanding connectivity to
-                    Asia and the Middle East. 24/7 professional technical
-                    support, unmetered bandwidth, SLA guarantee, and flawless
-                    company reputation over a decade.
-                  </p></a
-                >
-              </li>
-            </ul>
-
-            <h2 class="section-title">VPS</h2>
-
-            <ul class="services-vps__list">
-              <li class="services-vps__item">
-                <a class="services-vps__link" href="#">Ukraine SSD VPS</a>
-              </li>
-              <li class="services-vps__item">
-                <a class="services-vps__link" href="#">Netherlands SSD VPS</a>
-              </li>
-              <li class="services-vps__item">
-                <a class="services-vps__link" href="#">usa SSD VPS</a>
-              </li>
-              <li class="services-vps__item">
-                <a class="services-vps__link" href="#">epic VPS</a>
-              </li>
-            </ul>
+            <div id="servicesContent">Services</div>
           </div>
         </div>
       </section>
