--- a/index.html
+++ b/index.html
@@ -623,8 +623,8 @@
                   class="services-menu__button"
                 />
                 <label for="servers_button" class="services-menu__label"
-                  >Servers</label
-                >
+                  >Servers <span class="menu-arrow--big"></span
+                ></label>
               </li>
 
               <li class="services-menu__item">
@@ -635,8 +635,8 @@
                   class="services-menu__button"
                 />
                 <label for="hosting_button" class="services-menu__label"
-                  >Hosting</label
-                >
+                  >Hosting <span class="menu-arrow--big"></span>
+                </label>
               </li>
 
               <li class="services-menu__item">
@@ -647,8 +647,8 @@
                   class="services-menu__button"
                 />
                 <label for="cloud_button" class="services-menu__label"
-                  >Cloud</label
-                >
+                  >Cloud <span class="menu-arrow--big"></span
+                ></label>
               </li>
 
               <li class="services-menu__item">
@@ -659,8 +659,8 @@
                   class="services-menu__button"
                 />
                 <label for="services_button" class="services-menu__label"
-                  >Services</label
-                >
+                  >Services <span class="menu-arrow--big"></span
+                ></label>
               </li>
             </ul>
 
